# apple-signin-kit

./: .gitignore  .gitmodules  LICENSE  README.md  SECURITY-AUDIT-REPORT.md  mkdocs.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml  pr-review.yml  release.yml
.serena/: project.yml
.serena/memories/: code-style-conventions.md  project-overview.md  suggested-commands.md  task-completion-checklist.md
docs/: changelog.md  contributing.md  index.md
docs/api/: fastify-plugin.md  sveltekit-hooks.md  swift-sdk.md  types.md
docs/assets/: .gitkeep
docs/getting-started/: apple-setup.md  installation.md  quickstart.md
docs/includes/: abbreviations.md
docs/overrides/: .gitkeep
docs/security/: account-lockout.md  index.md  pkce.md  sessions.md
docs/stylesheets/: running-days.css
tools/docgen/: Cargo.toml
tools/docgen/src/: main.rs  types.rs
tools/docgen/src/commands/: generate.rs  mod.rs  validate.rs  watch.rs
tools/docgen/src/extractors/: mod.rs  typescript.rs
tools/docgen/src/generators/: markdown.rs  mod.rs
