[package]
name = "docgen"
version = "0.1.0"
edition = "2021"
description = "Documentation generator for Apple Sign-In SDK"
license = "Apache-2.0"
publish = false

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# File system operations
walkdir = "2.5"
glob = "0.3"

# Markdown/documentation
pulldown-cmark = "0.12"
pulldown-cmark-to-cmark = "18"

# JSON/YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# TypeScript parsing (for extracting types)
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"

# Template rendering
tera = "1.20"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for fetching remote schemas
reqwest = { version = "0.12", features = ["json"] }

# Regex for pattern matching
regex = "1.11"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "docgen"
path = "src/main.rs"
